--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "minio": "^8.0.2",
     "mongoose": "^8.7.0",
-    "node-cron": "^3.0.3"
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
