--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "sanitize-filename": "^1.6.3",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
